--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ gppcscconnectionplugin (1.1.0-1) unstable; urgency=low
 
   * Initial release (Closes: #656957)
 
- -- Dmitry Eremin-Solenikov <dbaryshkov@gmail.com>  Mon, 23 Jan 2012 11:14:24 +0400
+ -- Simon Josefsson <simon@josefsson.org>  Tue, 13 Aug 2013 16:21:32 +0200
